tests/lean/bad_id.lean.expected.out
bad_id.lean:5:12: error: invalid definition, '|' or ':=' expected
